# ai-commit

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_zh.md  Taskfile.yml  config.sample.toml  rustfmt.toml
src/: lib.rs  main.rs
src/ai/: client.rs  mod.rs  prompts.rs
src/commands/: amend.rs  commit.rs  config.rs  install.rs  mod.rs  uninstall.rs
src/config/: mod.rs  prompt.rs  settings.rs
src/git/: diff.rs  mod.rs  repository.rs
src/hooks/: mod.rs  post_commit.rs  prepare_commit_msg.rs
src/utils/: error.rs  mod.rs
tests/: integration_tests.rs  unit_tests.rs
