[package]
name = "ai-commit"
version = "0.1.4"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
anyhow = "1"
colored = "3"
clap = "4.6"
toml = "1"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"
serde_json = "1"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"
strip = true
overflow-checks = false
debug = false
debug-assertions = false
